<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_mypage_post_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_600"
            android:text="@string/title"
            android:textColor="@color/Neutral_900"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_mypage_post_content"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:fontFamily="@font/pretendard_400"
            android:maxLines="2"
            android:text="@string/content"
            android:textColor="@color/Neutral_700"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_post_title" />

        <ImageView
            android:id="@+id/iv_mypage_post_profile"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/ic_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_post_content" />

        <TextView
            android:id="@+id/tv_mypage_post_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/pretendard_400"
            android:text="@string/user_name"
            android:textColor="@color/Neutral_900"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/iv_mypage_post_profile"
            app:layout_constraintTop_toTopOf="@id/iv_mypage_post_profile" />

        <TextView
            android:id="@+id/tv_mypage_post_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_300"
            android:text="@string/post_time"
            android:textColor="@color/Neutral_500"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@id/tv_mypage_post_username"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_post_username" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_mypage_post_view_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_mypage_post_view_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_600"
                android:text="@string/view_count"
                android:textColor="@color/Neutral_700"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_eye"
                app:layout_constraintStart_toEndOf="@id/tv_mypage_post_view_count"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_mypage_post_view_container">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:scaleType="centerCrop"
                android:src="@drawable/menu_sample"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/corner_rd_12" />

            <ImageView
                android:id="@+id/iv_mypage_menu_count_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/ic_menu_count_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_600"
                android:text="@string/menu_count"
                android:textColor="@color/Neutral_100"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_mypage_menu_count_bg"
                app:layout_constraintEnd_toEndOf="@id/iv_mypage_menu_count_bg"
                app:layout_constraintStart_toStartOf="@id/iv_mypage_menu_count_bg"
                app:layout_constraintTop_toTopOf="@id/iv_mypage_menu_count_bg" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/v_mypage_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Neutral_300"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>