<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addMenu.AddMenuMapFragment">

    <!-- TODO: 지도 들어가는 부분 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Primary_100" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_add_menu_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_add_menu_search"
            android:layout_width="320dp"
            android:layout_height="44dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittext_bg_search"
            android:drawableRight="@drawable/ic_search"
            android:elevation="6dp"
            android:fontFamily="@font/pretendard_600"
            android:gravity="center_vertical"
            android:hint="가게 이름 검색"
            android:textColor="@color/Neutral_700"
            android:textColorHint="@color/Neutral_500"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_add_menu_search_results"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="68dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_add_menu_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_bg"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:id="@+id/iv_add_menu_bs_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bottomsheet_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_map_bs_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/iv_add_menu_bs_btn">

            <TextView
                android:id="@+id/tv_map_bs_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_700"
                android:text="@string/menu"
                android:textColor="@color/Neutral_900"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_map_bs_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/pretendard_600"
                android:text="@string/price"
                android:textColor="@color/Neutral_700"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_map_bs_menu"
                app:layout_constraintStart_toEndOf="@id/tv_map_bs_menu"
                app:layout_constraintTop_toTopOf="@id/tv_map_bs_menu" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:background="@drawable/folder_chip_bg"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"
                app:layout_constraintBottom_toBottomOf="@id/tv_map_bs_menu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_map_bs_menu">

                <ImageView
                    android:id="@+id/iv_map_folder_chip_icon"
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:src="@drawable/ic_sample_foler"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_map_folder_chip_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/pretendard_600"
                    android:text="@string/folder_name"
                    android:textColor="@color/Neutral_700"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_map_folder_chip_icon"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/tv_map_bs_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_600"
                android:text="@string/place_name"
                android:textColor="@color/Neutral_500"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_map_bs_menu" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_map_bs_imgs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@id/cl_map_bs_info">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/siv_map_bs_img1"
                android:layout_width="104dp"
                android:layout_height="80dp"
                android:src="@drawable/menu_sample"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/siv_map_bs_img2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/corner_rd_12" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/siv_map_bs_img2"
                android:layout_width="104dp"
                android:layout_height="80dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/menu_sample"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/siv_map_bs_img3"
                app:layout_constraintStart_toEndOf="@id/siv_map_bs_img1"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/corner_rd_12" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/siv_map_bs_img3"
                android:layout_width="104dp"
                android:layout_height="80dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/menu_sample"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/siv_map_bs_img2"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/corner_rd_12" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--        TODO: tag 논의 완료 되면 수정하기 -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="12dp"
            android:background="@color/Primary_100"
            app:layout_constraintTop_toBottomOf="@id/cl_map_bs_imgs">


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>