<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".landing.LandingActivity">

    <ImageView
        android:id="@+id/iv_landing_logo_img"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/ic_circle_orange_filled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_landing_logo_text"
        android:layout_width="158dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_logo_ourmenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_landing_logo_img" />

    <TextView
        android:id="@+id/tv_landing_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/pretendard_600"
        android:text="아워메뉴에 온 걸 환영해요!"
        android:textColor="@color/Neutral_900"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_landing_logo_text" />

    <TextView
        android:id="@+id/tv_landing_welcome_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/pretendard_400"
        android:text="저희와 함께 매일 먹을 한 끼를 고민해요."
        android:textColor="@color/Neutral_700"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_landing_welcome" />

    <Button
        android:id="@+id/btn_landing_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/button_bg_enabled"
        android:elevation="6dp"
        android:fontFamily="@font/pretendard_700"
        android:stateListAnimator="@null"
        android:text="@string/login"
        android:textColor="@color/Neutral_White"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_landing_welcome_description" />

    <Button
        android:id="@+id/btn_landing_signup"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_bg_outlined"
        android:fontFamily="@font/pretendard_500"
        android:stateListAnimator="@null"
        android:text="@string/signup"
        android:textColor="@color/Primary_500_main"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_landing_login" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="51dp"
        android:background="@color/Neutral_300"
        app:layout_constraintTop_toBottomOf="@id/btn_landing_signup" />

    <View
        android:id="@+id/v_landing_social_textbox"
        android:layout_width="75dp"
        android:layout_height="38dp"
        android:layout_marginTop="32dp"
        android:background="@color/Neutral_White"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_landing_signup" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_500"
        android:text="소셜 로그인"
        android:textColor="@color/Neutral_500"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/v_landing_social_textbox"
        app:layout_constraintEnd_toEndOf="@id/v_landing_social_textbox"
        app:layout_constraintStart_toStartOf="@id/v_landing_social_textbox"
        app:layout_constraintTop_toTopOf="@id/v_landing_social_textbox" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_landing_social_textbox">

        <ImageView
            android:id="@+id/iv_landing_kakao"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_kakao" />

        <ImageView
            android:id="@+id/iv_landing_google"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_google" />

        <ImageView
            android:id="@+id/iv_landing_naver"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_naver" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="59dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_logo_ourmenu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/pretendard_400"
            android:text="@string/copyright"
            android:textColor="@color/Neutral_500"
            android:textSize="10sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>